# audio-diffusion-v1

./: README.md  app.py  requirements-lock.txt  requirements.txt  setup.cfg  streamlit_app.py
audiodiffusion/: __init__.py  audio_encoder.py  mel.py  pipeline_audio_diffusion.py  utils.py
config/: accelerate_deepspeed.yaml  accelerate_local.yaml  accelerate_multi_gpu.yaml  accelerate_sagemaker.yaml  ldm_autoencoder_kl.yaml
notebooks/: audio_diffusion_pipeline.ipynb  audio_encoder.ipynb  conditional_generation.ipynb  gradio_app.ipynb  test_mel.ipynb  test_model.ipynb  test_vae.ipynb  train_model.ipynb
scripts/: audio_to_images.py  encode_audio.py  train_unet.py  train_vae.py
