[metadata]
name = audiodiffusion
version = attr: audiodiffusion.VERSION
description = Generate Mel spectrogram dataset from directory of audio files.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL3
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = audiodiffusion
install_requires =
    torch>=2.4.1
    numpy>=2.0.2
    Pillow>=10.4.0
    diffusers>=0.24.0
    librosa>=0.10.2.post1
    datasets>=2.19.1
    accelerate>=0.34.2
